[Payment Handler] Reject with TypeError for bad instrument icons.

Before this patch, failures to download and parse instrument icons would
result in a NotFoundError. This is contrary to the specification, which
states that a TypeError should be thrown:
https://w3c.github.io/payment-handler/#set-method

This patch changes from NotFoundError to TypeError when instrument icons
failed to download or parse.

After this patch, failures to download and parse instrument icons result
in a TypeError.

Bug: 813897
Change-Id: I124bf7789df37ffcccf43ffa45d5218818530514
Reviewed-on: https://chromium-review.googlesource.com/927461
Commit-Queue: Rouslan Solomakhin <rouslan@chromium.org>
Reviewed-by: Ganggui Tang <gogerald@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538573}
Former-commit-id: 6fb509a86bd8efc0b8be5619278c5b5be8b85f32